--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,4 +1,6 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
+imports:
+    - { resource: "../Resources/config/services.yml" }
 parameters:
 #    parameter_name: value
