--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,16 @@ twig:
 
 # Assetic Configuration
 assetic:
+    assets:
+        bootstrap_css:
+            inputs:
+                - 'bundles/app/bower_components/bootstrap/dist/css/bootstrap.min.css'
+        bootstrap_js:
+            inputs:
+                - 'bundles/app/bower_components/bootstrap/dist/js/bootstrap.min.js'
+        jquery:
+            inputs:
+                - 'bundles/app/bower_components/jquery/dist/jquery.min.js'
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
@@ -51,7 +61,7 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
+        driver:   pdo_pgsql
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
@@ -77,3 +87,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     /usr/local/bin/wkhtmltopdf.sh #"\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\"" for Windows users
+        options:    []
